--- a/tutorial_notebooks/tutorial016-Pandas-DataWrangling.ipynb
+++ b/tutorial_notebooks/tutorial016-Pandas-DataWrangling.ipynb
@@ -2511,6 +2511,268 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "b46f622d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Wild Type</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Wild Type</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Wild Type</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Wild Type</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Wild Type</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Wild Type</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Wild Type</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Wild Type</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Wild Type</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Wild Type</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Wild Type</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Wild Type</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Wild Type</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Wild Type</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Wild Type</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Wild Type</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>Wild Type</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>Wild Type</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>Wild Type</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>Wild Type</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>Mutant</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>Mutant</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>Mutant</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>Mutant</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>Mutant</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>Mutant</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>Mutant</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>Mutant</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>Mutant</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>Mutant</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>Mutant</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>Mutant</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>Mutant</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>Mutant</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>Mutant</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>Mutant</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>Mutant</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>Mutant</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38</th>\n",
+       "      <td>Mutant</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>Mutant</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            0\n",
+       "0   Wild Type\n",
+       "1   Wild Type\n",
+       "2   Wild Type\n",
+       "3   Wild Type\n",
+       "4   Wild Type\n",
+       "5   Wild Type\n",
+       "6   Wild Type\n",
+       "7   Wild Type\n",
+       "8   Wild Type\n",
+       "9   Wild Type\n",
+       "10  Wild Type\n",
+       "11  Wild Type\n",
+       "12  Wild Type\n",
+       "13  Wild Type\n",
+       "14  Wild Type\n",
+       "15  Wild Type\n",
+       "16  Wild Type\n",
+       "17  Wild Type\n",
+       "18  Wild Type\n",
+       "19  Wild Type\n",
+       "20     Mutant\n",
+       "21     Mutant\n",
+       "22     Mutant\n",
+       "23     Mutant\n",
+       "24     Mutant\n",
+       "25     Mutant\n",
+       "26     Mutant\n",
+       "27     Mutant\n",
+       "28     Mutant\n",
+       "29     Mutant\n",
+       "30     Mutant\n",
+       "31     Mutant\n",
+       "32     Mutant\n",
+       "33     Mutant\n",
+       "34     Mutant\n",
+       "35     Mutant\n",
+       "36     Mutant\n",
+       "37     Mutant\n",
+       "38     Mutant\n",
+       "39     Mutant"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# number of WT and mutant rats\n",
+    "numWT = len(df['Male Wild Type']) + len(df['Female  Wild Type'])\n",
+    "numMutants = len(df['Male Mutant']) + len(df['Female Mutant'])\n",
+    "strain_list = []\n",
+    "# add Wild Type label for data collected from every WT rat\n",
+    "for i in range(numWT):\n",
+    "    strain_list.append('Wild Type')\n",
+    "\n",
+    "# add mutant label for data collected from every mutant rat\n",
+    "for i in range(numMutants):\n",
+    "    strain_list.append('Mutant')\n",
+    "\n",
+    "# create Pandas df based on the list created\n",
+    "strain = pd.DataFrame(strain_list)\n",
+    "strain"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "f41cd6dd",
    "metadata": {},
@@ -2522,7 +2784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 28,
    "id": "95fbda4f",
    "metadata": {},
    "outputs": [
@@ -2547,250 +2809,168 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Data</th>\n",
-       "      <th>Sex</th>\n",
-       "      <th>Strain</th>\n",
+       "      <th>0</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>10.485451</td>\n",
-       "      <td>M</td>\n",
        "      <td>Wild Type</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>11.747948</td>\n",
-       "      <td>M</td>\n",
        "      <td>Wild Type</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>13.412580</td>\n",
-       "      <td>M</td>\n",
        "      <td>Wild Type</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>12.910095</td>\n",
-       "      <td>M</td>\n",
        "      <td>Wild Type</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>10.367770</td>\n",
-       "      <td>M</td>\n",
        "      <td>Wild Type</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>11.698422</td>\n",
-       "      <td>M</td>\n",
        "      <td>Wild Type</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>11.583153</td>\n",
-       "      <td>M</td>\n",
        "      <td>Wild Type</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>11.447349</td>\n",
-       "      <td>M</td>\n",
        "      <td>Wild Type</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>10.852276</td>\n",
-       "      <td>M</td>\n",
        "      <td>Wild Type</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>11.285897</td>\n",
-       "      <td>M</td>\n",
        "      <td>Wild Type</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
-       "      <td>8.250013</td>\n",
-       "      <td>F</td>\n",
        "      <td>Wild Type</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
-       "      <td>8.453839</td>\n",
-       "      <td>F</td>\n",
        "      <td>Wild Type</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
-       "      <td>9.706605</td>\n",
-       "      <td>F</td>\n",
        "      <td>Wild Type</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
-       "      <td>9.522116</td>\n",
-       "      <td>F</td>\n",
        "      <td>Wild Type</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
-       "      <td>8.583212</td>\n",
-       "      <td>F</td>\n",
        "      <td>Wild Type</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
-       "      <td>9.835002</td>\n",
-       "      <td>F</td>\n",
        "      <td>Wild Type</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
-       "      <td>10.532096</td>\n",
-       "      <td>F</td>\n",
        "      <td>Wild Type</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
-       "      <td>9.394166</td>\n",
-       "      <td>F</td>\n",
        "      <td>Wild Type</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
-       "      <td>8.739473</td>\n",
-       "      <td>F</td>\n",
        "      <td>Wild Type</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
-       "      <td>10.892394</td>\n",
-       "      <td>F</td>\n",
        "      <td>Wild Type</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>20</th>\n",
-       "      <td>20.127063</td>\n",
-       "      <td>M</td>\n",
        "      <td>Mutant</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>21</th>\n",
-       "      <td>20.068147</td>\n",
-       "      <td>M</td>\n",
        "      <td>Mutant</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>22</th>\n",
-       "      <td>21.215148</td>\n",
-       "      <td>M</td>\n",
        "      <td>Mutant</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>23</th>\n",
-       "      <td>20.706416</td>\n",
-       "      <td>M</td>\n",
        "      <td>Mutant</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>24</th>\n",
-       "      <td>18.074795</td>\n",
-       "      <td>M</td>\n",
        "      <td>Mutant</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25</th>\n",
-       "      <td>20.367624</td>\n",
-       "      <td>M</td>\n",
        "      <td>Mutant</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>26</th>\n",
-       "      <td>20.152521</td>\n",
-       "      <td>M</td>\n",
        "      <td>Mutant</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>27</th>\n",
-       "      <td>19.392476</td>\n",
-       "      <td>M</td>\n",
        "      <td>Mutant</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>28</th>\n",
-       "      <td>18.524341</td>\n",
-       "      <td>M</td>\n",
        "      <td>Mutant</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>29</th>\n",
-       "      <td>20.325026</td>\n",
-       "      <td>M</td>\n",
        "      <td>Mutant</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>30</th>\n",
-       "      <td>25.946384</td>\n",
-       "      <td>F</td>\n",
        "      <td>Mutant</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>31</th>\n",
-       "      <td>23.464870</td>\n",
-       "      <td>F</td>\n",
        "      <td>Mutant</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>32</th>\n",
-       "      <td>22.989480</td>\n",
-       "      <td>F</td>\n",
        "      <td>Mutant</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>33</th>\n",
-       "      <td>25.324376</td>\n",
-       "      <td>F</td>\n",
        "      <td>Mutant</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>34</th>\n",
-       "      <td>22.607487</td>\n",
-       "      <td>F</td>\n",
        "      <td>Mutant</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>35</th>\n",
-       "      <td>23.052187</td>\n",
-       "      <td>F</td>\n",
        "      <td>Mutant</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>36</th>\n",
-       "      <td>25.369037</td>\n",
-       "      <td>F</td>\n",
        "      <td>Mutant</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>37</th>\n",
-       "      <td>23.372709</td>\n",
-       "      <td>F</td>\n",
        "      <td>Mutant</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>38</th>\n",
-       "      <td>25.215646</td>\n",
-       "      <td>F</td>\n",
        "      <td>Mutant</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>39</th>\n",
-       "      <td>24.990505</td>\n",
-       "      <td>F</td>\n",
        "      <td>Mutant</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -2798,79 +2978,64 @@
        "</div>"
       ],
       "text/plain": [
-       "         Data Sex     Strain\n",
-       "0   10.485451   M  Wild Type\n",
-       "1   11.747948   M  Wild Type\n",
-       "2   13.412580   M  Wild Type\n",
-       "3   12.910095   M  Wild Type\n",
-       "4   10.367770   M  Wild Type\n",
-       "5   11.698422   M  Wild Type\n",
-       "6   11.583153   M  Wild Type\n",
-       "7   11.447349   M  Wild Type\n",
-       "8   10.852276   M  Wild Type\n",
-       "9   11.285897   M  Wild Type\n",
-       "10   8.250013   F  Wild Type\n",
-       "11   8.453839   F  Wild Type\n",
-       "12   9.706605   F  Wild Type\n",
-       "13   9.522116   F  Wild Type\n",
-       "14   8.583212   F  Wild Type\n",
-       "15   9.835002   F  Wild Type\n",
-       "16  10.532096   F  Wild Type\n",
-       "17   9.394166   F  Wild Type\n",
-       "18   8.739473   F  Wild Type\n",
-       "19  10.892394   F  Wild Type\n",
-       "20  20.127063   M     Mutant\n",
-       "21  20.068147   M     Mutant\n",
-       "22  21.215148   M     Mutant\n",
-       "23  20.706416   M     Mutant\n",
-       "24  18.074795   M     Mutant\n",
-       "25  20.367624   M     Mutant\n",
-       "26  20.152521   M     Mutant\n",
-       "27  19.392476   M     Mutant\n",
-       "28  18.524341   M     Mutant\n",
-       "29  20.325026   M     Mutant\n",
-       "30  25.946384   F     Mutant\n",
-       "31  23.464870   F     Mutant\n",
-       "32  22.989480   F     Mutant\n",
-       "33  25.324376   F     Mutant\n",
-       "34  22.607487   F     Mutant\n",
-       "35  23.052187   F     Mutant\n",
-       "36  25.369037   F     Mutant\n",
-       "37  23.372709   F     Mutant\n",
-       "38  25.215646   F     Mutant\n",
-       "39  24.990505   F     Mutant"
+       "            0\n",
+       "0   Wild Type\n",
+       "1   Wild Type\n",
+       "2   Wild Type\n",
+       "3   Wild Type\n",
+       "4   Wild Type\n",
+       "5   Wild Type\n",
+       "6   Wild Type\n",
+       "7   Wild Type\n",
+       "8   Wild Type\n",
+       "9   Wild Type\n",
+       "10  Wild Type\n",
+       "11  Wild Type\n",
+       "12  Wild Type\n",
+       "13  Wild Type\n",
+       "14  Wild Type\n",
+       "15  Wild Type\n",
+       "16  Wild Type\n",
+       "17  Wild Type\n",
+       "18  Wild Type\n",
+       "19  Wild Type\n",
+       "20     Mutant\n",
+       "21     Mutant\n",
+       "22     Mutant\n",
+       "23     Mutant\n",
+       "24     Mutant\n",
+       "25     Mutant\n",
+       "26     Mutant\n",
+       "27     Mutant\n",
+       "28     Mutant\n",
+       "29     Mutant\n",
+       "30     Mutant\n",
+       "31     Mutant\n",
+       "32     Mutant\n",
+       "33     Mutant\n",
+       "34     Mutant\n",
+       "35     Mutant\n",
+       "36     Mutant\n",
+       "37     Mutant\n",
+       "38     Mutant\n",
+       "39     Mutant"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# create Series with actual data values for all strains\n",
-    "data_recorded = pd.concat([df['Male Mutant'], \n",
-    "                           df['Female Mutant'],\n",
-    "                           df['Male Wild Type'],\n",
-    "                           df['Female  Wild Type']],ignore_index=True)\n",
-    "\n",
     "# create Series with strain labels\n",
     "numData, numGroups = df.shape # find numData (aka, how many times to repeat)\n",
-    "strain = pd.Series(['Wild Type', 'Mutant']) \n",
-    "strain = strain.repeat(2*numData)       \n",
-    "strain = strain.reset_index(drop=True) # reset index\n",
+    "strain_series = pd.Series(['Wild Type', 'Mutant']) \n",
+    "strain_series = strain_series.repeat(2*numData)       \n",
+    "strain_series = strain_series.reset_index(drop=True) # reset index\n",
     "\n",
-    "# create Series with sex labels\n",
-    "sex = pd.Series(['M', 'F'])\n",
-    "sex = sex.repeat(numData)\n",
-    "sex = pd.concat([sex]*2)\n",
-    "sex = sex.reset_index(drop=True) # reset index\n",
-    "\n",
-    "# add Series into a final df\n",
-    "new_data_flex = pd.DataFrame([])\n",
-    "new_data_flex['Data'] = data_recorded \n",
-    "new_data_flex['Sex'] = sex\n",
-    "new_data_flex['Strain'] = strain\n",
-    "new_data_flex # display new df"
+    "# create Pandas df based on the list created\n",
+    "strain = pd.DataFrame(strain_series)\n",
+    "strain"
    ]
   },
   {
