--- a/tutorial_notebooks/tutorial016-Pandas-DataWrangling.ipynb
+++ b/tutorial_notebooks/tutorial016-Pandas-DataWrangling.ipynb
@@ -2512,8 +2512,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "b46f622d",
+   "execution_count": 22,
+   "id": "4e7e0f6b",
    "metadata": {},
    "outputs": [
     {
@@ -2749,7 +2749,7 @@
        "39     Mutant"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2758,7 +2758,8 @@
     "# number of WT and mutant rats\n",
     "numWT = len(df['Male Wild Type']) + len(df['Female  Wild Type'])\n",
     "numMutants = len(df['Male Mutant']) + len(df['Female Mutant'])\n",
-    "strain_list = []\n",
+    "strain_list = [] # list to store strain type labels\n",
+    "\n",
     "# add Wild Type label for data collected from every WT rat\n",
     "for i in range(numWT):\n",
     "    strain_list.append('Wild Type')\n",
@@ -2784,7 +2785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 23,
    "id": "95fbda4f",
    "metadata": {},
    "outputs": [
@@ -3021,7 +3022,7 @@
        "39     Mutant"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3033,7 +3034,7 @@
     "strain_series = strain_series.repeat(2*numData)       \n",
     "strain_series = strain_series.reset_index(drop=True) # reset index\n",
     "\n",
-    "# create Pandas df based on the list created\n",
+    "# create Pandas df based on the Series created\n",
     "strain = pd.DataFrame(strain_series)\n",
     "strain"
    ]
