--- a/tutorial_notebooks/tutorial017-Pandas-DataWranglingAutomation.ipynb
+++ b/tutorial_notebooks/tutorial017-Pandas-DataWranglingAutomation.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 47,
    "id": "5212a9a6",
    "metadata": {},
    "outputs": [],
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 48,
    "id": "337ca959",
    "metadata": {},
    "outputs": [],
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 49,
    "id": "ab53d09c",
    "metadata": {
     "scrolled": true
@@ -159,7 +159,7 @@
        "4    10.367770       8.583212       18.074795          22.607487"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 50,
    "id": "a3597f52",
    "metadata": {},
    "outputs": [],
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 51,
    "id": "8418feb3",
    "metadata": {},
    "outputs": [],
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 52,
    "id": "2d3c1ec4",
    "metadata": {
     "scrolled": true
@@ -283,7 +283,7 @@
        "       [11.28589742, 10.89239399, 20.32502629, 24.99050453]])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 53,
    "id": "174b3e3b",
    "metadata": {},
    "outputs": [
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 54,
    "id": "b903a938",
    "metadata": {
     "scrolled": true
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 55,
    "id": "da1521a9",
    "metadata": {},
    "outputs": [],
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 56,
    "id": "80376fbe",
    "metadata": {},
    "outputs": [
@@ -476,7 +476,7 @@
        "       [24.99050453]])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 57,
    "id": "c5f6282b",
    "metadata": {},
    "outputs": [],
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 58,
    "id": "4b8b7d19",
    "metadata": {},
    "outputs": [
@@ -570,7 +570,7 @@
        "       [24.99050453]])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -615,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 59,
    "id": "ed3e1de0",
    "metadata": {},
    "outputs": [
@@ -625,7 +625,7 @@
        "(40, 1)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -644,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 60,
    "id": "ec0537d0",
    "metadata": {},
    "outputs": [],
@@ -662,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 61,
    "id": "1a723fd0",
    "metadata": {},
    "outputs": [
@@ -672,7 +672,7 @@
        "(40,)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -717,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 62,
    "id": "93e2fbe3",
    "metadata": {},
    "outputs": [],
@@ -768,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 63,
    "id": "dfd72bab",
    "metadata": {},
    "outputs": [],
@@ -783,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 64,
    "id": "080eb73f",
    "metadata": {},
    "outputs": [
@@ -886,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 65,
    "id": "b8d898fd",
    "metadata": {},
    "outputs": [],
@@ -924,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 66,
    "id": "5f1607ec",
    "metadata": {},
    "outputs": [
@@ -1020,7 +1020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 67,
    "id": "621e0177",
    "metadata": {},
    "outputs": [],
@@ -1032,7 +1032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 68,
    "id": "7ec33914",
    "metadata": {},
    "outputs": [
@@ -1116,7 +1116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 69,
    "id": "1497f14c",
    "metadata": {},
    "outputs": [
@@ -1146,7 +1146,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1169,7 +1169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 70,
    "id": "8ba4bbe3",
    "metadata": {},
    "outputs": [
@@ -1209,7 +1209,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1242,7 +1242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 71,
    "id": "1d4dd1ed",
    "metadata": {},
    "outputs": [],
@@ -1252,7 +1252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 72,
    "id": "74c9eede",
    "metadata": {},
    "outputs": [
@@ -1262,7 +1262,7 @@
        "'Larry'"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1273,7 +1273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 73,
    "id": "f6ae65c9",
    "metadata": {},
    "outputs": [
@@ -1283,7 +1283,7 @@
        "5"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1304,7 +1304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 74,
    "id": "42416bb7",
    "metadata": {},
    "outputs": [],
@@ -1330,7 +1330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 75,
    "id": "c8c4d131",
    "metadata": {},
    "outputs": [],
@@ -1354,7 +1354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 76,
    "id": "ea658a54",
    "metadata": {},
    "outputs": [],
@@ -1380,7 +1380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 77,
    "id": "466c0eef",
    "metadata": {},
    "outputs": [
@@ -1699,7 +1699,7 @@
        "39  24.990505  female    mutant"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1742,7 +1742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 78,
    "id": "277d872c",
    "metadata": {},
    "outputs": [],
@@ -1764,7 +1764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 79,
    "id": "ae481c54",
    "metadata": {},
    "outputs": [
@@ -1790,7 +1790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 80,
    "id": "49a156d8",
    "metadata": {},
    "outputs": [],
@@ -1823,7 +1823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 81,
    "id": "248e597e",
    "metadata": {},
    "outputs": [
@@ -1942,7 +1942,7 @@
        "[80 rows x 3 columns]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1988,7 +1988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 82,
    "id": "1bd7aefb",
    "metadata": {},
    "outputs": [],
@@ -2033,7 +2033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 83,
    "id": "7acf5fdd",
    "metadata": {},
    "outputs": [],
@@ -2043,7 +2043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 84,
    "id": "056d4f2e",
    "metadata": {},
    "outputs": [
@@ -2162,7 +2162,7 @@
        "[80 rows x 3 columns]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2184,7 +2184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 85,
    "id": "7dec064a",
    "metadata": {},
    "outputs": [],
@@ -2237,7 +2237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 86,
    "id": "b60521d7",
    "metadata": {},
    "outputs": [],
@@ -2247,7 +2247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 87,
    "id": "1c1febb1",
    "metadata": {},
    "outputs": [
@@ -2366,7 +2366,7 @@
        "[168 rows x 3 columns]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2388,7 +2388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 88,
    "id": "11a23e91",
    "metadata": {},
    "outputs": [],
@@ -2439,7 +2439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 89,
    "id": "37d81f55",
    "metadata": {},
    "outputs": [
@@ -2507,13 +2507,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 90,
    "id": "375832c3",
    "metadata": {},
    "outputs": [],
    "source": [
     "# modified tidyMyData() where column names can be specified by the user\n",
-    "def tidyMyData(filename, colNames = ['sex', 'RTs', 'strain']) :\n",
+    "def tidyMyData(filename, colNames = ['sex', 'RTs', 'strain']) : # added colNames argument\n",
     "    '''\n",
     "    tidyMyData() Takes one-column-per-cell rat reaction time data and 3 column names as input.\n",
     "    Returns tidy one-column-per-variable data.\n",
@@ -2559,7 +2559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 91,
    "id": "a9610279",
    "metadata": {},
    "outputs": [
@@ -2678,7 +2678,7 @@
        "[80 rows x 3 columns]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2689,7 +2689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 92,
    "id": "5b15d7d6",
    "metadata": {},
    "outputs": [
@@ -2808,7 +2808,7 @@
        "[80 rows x 3 columns]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
