--- a/tutorial_notebooks/tutorial021-Plotting-Seaborn-Introduction.ipynb
+++ b/tutorial_notebooks/tutorial021-Plotting-Seaborn-Introduction.ipynb
@@ -832,7 +832,7 @@
     }
    ],
    "source": [
-    "sns.displot(x = \"RTs\", data = our_data, hue = \"strain\", row=\"sex\", ecdf = \"ecdf\")"
+    "sns.displot(x = \"RTs\", data = our_data, hue = \"strain\", row=\"sex\", ecdf = \"ecdf\") #error because no such parameter of `ecdf`"
    ]
   },
   {
@@ -1135,7 +1135,7 @@
     "* set one of the above three be the default\n",
     "* have a docstr so users can get help() on it\n",
     "* produce the plot requested by the user (of course!)\n",
-    "* provide a meanignful help"
+    "* provide a meaningful help"
    ]
   },
   {
@@ -1160,8 +1160,7 @@
     "    Returns seaborn plot.\n",
     "    '''\n",
     "    import seaborn as sns\n",
-    "    ax = sns.catplot(y = \"RTs\", x=\"strain\", data = our_data, hue = \"sex\", kind=plot_type); # change name of variables??\n",
-    "    #ax.set_title(\"\");\n",
+    "    ax = sns.catplot(y = \"RTs\", x=\"strain\", data = df, hue = \"sex\", kind=plot_type); # change name of variables??\n",
     "    return ax"
    ]
   },
