--- a/tutorial_notebooks/tutorial020-Pandas-Advanced-TimeSeries.ipynb
+++ b/tutorial_notebooks/tutorial020-Pandas-Advanced-TimeSeries.ipynb
@@ -688,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "74882f6f",
    "metadata": {},
    "outputs": [],
@@ -1204,7 +1204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "id": "f18540c5",
    "metadata": {},
    "outputs": [],
@@ -1214,7 +1214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "id": "96da5889",
    "metadata": {},
    "outputs": [
@@ -1239,160 +1239,190 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Luck</th>\n",
        "      <th>Happiness</th>\n",
+       "      <th>Luck</th>\n",
+       "      <th>Favourite song</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>2000-12-31</th>\n",
-       "      <td>3</td>\n",
        "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>You Owe Me One</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2001-12-31</th>\n",
-       "      <td>3</td>\n",
        "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Why Did It Have to Be Me?</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2002-12-31</th>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>When You Danced with Me</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2003-12-31</th>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>When I Kissed the Teacher</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2004-12-31</th>\n",
-       "      <td>2</td>\n",
+       "      <td>0</td>\n",
        "      <td>4</td>\n",
+       "      <td>When All is Said and Done</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2005-12-31</th>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>What About Livingstone</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2006-12-31</th>\n",
        "      <td>4</td>\n",
-       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Waterloo</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2007-12-31</th>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Watch Out</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2008-12-31</th>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Voulez-Vous</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2009-12-31</th>\n",
-       "      <td>4</td>\n",
-       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Under Attack</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2010-12-31</th>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Two For the Price of One</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2011-12-31</th>\n",
        "      <td>2</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Tropical Loveland</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2012-12-31</th>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Tiger</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2013-12-31</th>\n",
        "      <td>0</td>\n",
-       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>The Winner Takes It All</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2014-12-31</th>\n",
-       "      <td>2</td>\n",
        "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>The Way Old Friends Do</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2015-12-31</th>\n",
        "      <td>4</td>\n",
-       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>The Visitors</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2016-12-31</th>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>The Piper</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2017-12-31</th>\n",
-       "      <td>0</td>\n",
+       "      <td>3</td>\n",
        "      <td>1</td>\n",
+       "      <td>The Name of the Game</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2018-12-31</th>\n",
+       "      <td>2</td>\n",
        "      <td>0</td>\n",
-       "      <td>4</td>\n",
+       "      <td>On and On and On</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2019-12-31</th>\n",
-       "      <td>4</td>\n",
-       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Ode to Freedom</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2020-12-31</th>\n",
-       "      <td>2</td>\n",
        "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Money, Money, Money</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2021-12-31</th>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Mamma Mia</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "            Luck  Happiness\n",
-       "2000-12-31     3          4\n",
-       "2001-12-31     3          2\n",
-       "2002-12-31     3          0\n",
-       "2003-12-31     1          1\n",
-       "2004-12-31     2          4\n",
-       "2005-12-31     3          0\n",
-       "2006-12-31     4          2\n",
-       "2007-12-31     2          1\n",
-       "2008-12-31     0          2\n",
-       "2009-12-31     4          2\n",
-       "2010-12-31     4          4\n",
-       "2011-12-31     2          1\n",
-       "2012-12-31     3          0\n",
-       "2013-12-31     0          3\n",
-       "2014-12-31     2          1\n",
-       "2015-12-31     4          1\n",
-       "2016-12-31     2          0\n",
-       "2017-12-31     0          1\n",
-       "2018-12-31     0          4\n",
-       "2019-12-31     4          3\n",
-       "2020-12-31     2          0\n",
-       "2021-12-31     2          0"
+       "            Happiness  Luck             Favourite song\n",
+       "2000-12-31          4     4             You Owe Me One\n",
+       "2001-12-31          2     1  Why Did It Have to Be Me?\n",
+       "2002-12-31          2     2    When You Danced with Me\n",
+       "2003-12-31          1     4  When I Kissed the Teacher\n",
+       "2004-12-31          0     4  When All is Said and Done\n",
+       "2005-12-31          1     1     What About Livingstone\n",
+       "2006-12-31          4     4                   Waterloo\n",
+       "2007-12-31          0     0                  Watch Out\n",
+       "2008-12-31          3     3                Voulez-Vous\n",
+       "2009-12-31          3     1               Under Attack\n",
+       "2010-12-31          2     1   Two For the Price of One\n",
+       "2011-12-31          2     0          Tropical Loveland\n",
+       "2012-12-31          1     2                      Tiger\n",
+       "2013-12-31          0     4    The Winner Takes It All\n",
+       "2014-12-31          1     0     The Way Old Friends Do\n",
+       "2015-12-31          4     3               The Visitors\n",
+       "2016-12-31          1     1                  The Piper\n",
+       "2017-12-31          3     1       The Name of the Game\n",
+       "2018-12-31          2     0           On and On and On\n",
+       "2019-12-31          2     1             Ode to Freedom\n",
+       "2020-12-31          0     4        Money, Money, Money\n",
+       "2021-12-31          1     4                  Mamma Mia"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_myLife = pd.DataFrame(np.random.randint(low=0, high=5, size = ((np.squeeze(dates.shape), 2))), #REDO!!\n",
+    "df_myLife = pd.DataFrame(np.random.randint(low=0, high=5, size = ((np.squeeze(dates.shape), 2))),\n",
     "                         index=dates, \n",
     "                         columns={\"Happiness\", \"Luck\"})\n",
+    "fav_songs = np.array([\"You Owe Me One\", \"Why Did It Have to Be Me?\", \"When You Danced with Me\",\n",
+    "                      \"When I Kissed the Teacher\", \"When All is Said and Done\",\n",
+    "                      \"What About Livingstone\", \"Waterloo\", \"Watch Out\", \"Voulez-Vous\", \"Under Attack\",\n",
+    "                      \"Two For the Price of One\", \"Tropical Loveland\", \"Tiger\", \"The Winner Takes It All\",\n",
+    "                      \"The Way Old Friends Do\", \"The Visitors\", \"The Piper\", \"The Name of the Game\", \n",
+    "                      \"On and On and On\", \"Ode to Freedom\", \"Money, Money, Money\", \"Mamma Mia\"])\n",
+    "df_myLife[\"Favourite song\"] = fav_songs\n",
     "df_myLife"
    ]
   },
@@ -1560,7 +1590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 17,
    "id": "36be1c07",
    "metadata": {},
    "outputs": [
@@ -1577,7 +1607,7 @@
        "              dtype='datetime64[ns]', length=122, freq=None)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1591,7 +1621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 18,
    "id": "00966197",
    "metadata": {},
    "outputs": [
@@ -1601,7 +1631,7 @@
        "DatetimeIndex(['1995-06-16'], dtype='datetime64[ns]', freq=None)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1613,7 +1643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 19,
    "id": "7b1d4032",
    "metadata": {},
    "outputs": [
@@ -1630,7 +1660,7 @@
        "              dtype='datetime64[ns]', length=123, freq=None)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1642,7 +1672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 24,
    "id": "446ed248",
    "metadata": {},
    "outputs": [
@@ -1675,33 +1705,33 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>1985-05-08</th>\n",
-       "      <td>4</td>\n",
-       "      <td>8</td>\n",
-       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>87</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1985-06-08</th>\n",
-       "      <td>5</td>\n",
-       "      <td>3</td>\n",
-       "      <td>7</td>\n",
+       "      <td>9</td>\n",
+       "      <td>4</td>\n",
+       "      <td>64</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1985-07-08</th>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>6</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>105</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1985-08-08</th>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
        "      <td>0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>116</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1985-09-08</th>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
+       "      <td>9</td>\n",
+       "      <td>5</td>\n",
+       "      <td>96</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -1711,33 +1741,33 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1995-03-08</th>\n",
-       "      <td>5</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>9</td>\n",
+       "      <td>115</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1995-04-08</th>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>63</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1995-05-08</th>\n",
        "      <td>0</td>\n",
-       "      <td>5</td>\n",
-       "      <td>4</td>\n",
+       "      <td>8</td>\n",
+       "      <td>93</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1995-06-08</th>\n",
-       "      <td>3</td>\n",
-       "      <td>7</td>\n",
        "      <td>2</td>\n",
+       "      <td>6</td>\n",
+       "      <td>118</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1995-06-16</th>\n",
-       "      <td>3</td>\n",
-       "      <td>6</td>\n",
-       "      <td>2</td>\n",
+       "      <td>8</td>\n",
+       "      <td>8</td>\n",
+       "      <td>102</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1746,32 +1776,40 @@
       ],
       "text/plain": [
        "            Mental health  Quality of life  Heart rate\n",
-       "1985-05-08              4                8           4\n",
-       "1985-06-08              5                3           7\n",
-       "1985-07-08              2                0           6\n",
-       "1985-08-08              3                4           0\n",
-       "1985-09-08              4                4           4\n",
+       "1985-05-08              5                1          87\n",
+       "1985-06-08              9                4          64\n",
+       "1985-07-08              4                3         105\n",
+       "1985-08-08              0                7         116\n",
+       "1985-09-08              9                5          96\n",
        "...                   ...              ...         ...\n",
-       "1995-03-08              5                4           0\n",
-       "1995-04-08              1                0           0\n",
-       "1995-05-08              0                5           4\n",
-       "1995-06-08              3                7           2\n",
-       "1995-06-16              3                6           2\n",
+       "1995-03-08              3                9         115\n",
+       "1995-04-08              1                1          63\n",
+       "1995-05-08              0                8          93\n",
+       "1995-06-08              2                6         118\n",
+       "1995-06-16              8                8         102\n",
        "\n",
        "[123 rows x 3 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# create df that store the 3 variables for each of the dates from above\n",
-    "# each column/variable is rated on a scale of 0~10 (0=bad, 10=great)\n",
-    "df = pd.DataFrame(np.random.randint(low=0, high=10, size = ((np.squeeze(dates.shape), 3))),\n",
-    "                  index=dates, \n",
-    "                  columns={\"Mental health\", \"Quality of life\", \"Heart rate\"})\n",
+    "# create the 3 variables as lists\n",
+    "# mental health and quality of life are rated on a scale of 0~10 (0=bad, 10=great)\n",
+    "mental_health = np.random.randint(low=0, high=10, size=len(dates))\n",
+    "qual_life = np.random.randint(low=0, high=10, size=len(dates))\n",
+    "heart_rate = np.random.randint(low=60, high=120, size=len(dates))\n",
+    "\n",
+    "# create dictionary that includes all 3 variable\n",
+    "data = {'Mental health': mental_health,\n",
+    "        'Quality of life': qual_life,\n",
+    "        'Heart rate': heart_rate}\n",
+    "\n",
+    "# create df with indices as dates and has 3 columns for each of the 3 variables\n",
+    "df = pd.DataFrame(data, index=dates)\n",
     "df"
    ]
   },
